[package]
name = "rust_cli_roguelike"
version = "0.1.0"
edition = "2021"
default-run = "client"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
ratatui = "0.29.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
futures-util = "0.3"
